restructure content flow

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -162,10 +162,50 @@ flowchart LR
   <!-- Challenges -->
   <section class="py-12 md:py-20" id="challenges">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold">Facing the AI Shift? You’re Not Alone—Here’s Your Path Forward</h2>
-      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">
-        In a world where AI is revolutionizing human‑computer interactions, legacy mobile apps face tough hurdles: rigid UIs that frustrate users, privacy rules that break old tracking models, and the pressure to adapt or be replaced. But there’s massive opportunity in the long tail of apps ready for AI upgrades. NeuronKit makes it simple: non‑intrusively integrate context‑aware agents to supplement your flows, augment personalization, or evolve into fully proactive experiences. No full rewrites—just empowering tools to join the agentic future.
-      </p>
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">Challenges you’re facing — in the AI age</h2>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Rigid UX misses intent</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Users expect proactive help. Click‑based flows lose context and drop conversions.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Privacy makes old playbooks obsolete</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Cookie/fingerprint‑heavy tracking fails. Consent and transparency are non‑negotiable.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">AI is inevitable, rewrites aren’t</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">You need agentic capability now—but full rewrites stall roadmaps and risk regressions.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Context is the missing piece</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">LLMs guess when they should know. Without device/app context, your “AI” can’t act meaningfully.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- What to do next -->
+  <section class="py-12 md:py-20" id="next">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">What to do next — a low‑risk path forward</h2>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Start with dialog streams</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Layer conversational flows alongside existing UI. No big rewrites—just alternate paths to outcomes.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Capture useful context</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Stream location, sensors, and app telemetry into a memory layer for personalization and reasoning.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Keep actions on‑device</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Run sensitive actions locally with least‑privilege scopes, per‑action consent, and full audit.</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">Bridge cloud ↔ edge</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Do inference in the cloud, execute safely on the device. Fast, private, and policy‑controlled.</p>
+        </div>
+      </div>
     </div>
   </section>
 
