--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -160,10 +160,50 @@ flowchart LR
   <!-- 挑战 -->
   <section class="py-12 md:py-20" id="challenges">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold">直面 AI 转型？你并不孤单——这是你的升级路径</h2>
-      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">
-        当 AI 重新定义人机交互，遗留移动应用面临诸多挑战：僵硬的界面让用户流失，隐私合规冲击传统跟踪方式，转型压力如影随形。但机遇同样巨大——长尾应用都在等待 AI 升级。NeuronKit 让这一切变得简单：非侵入式地集成具备上下文感知的代理，可补充现有流程、增强个性化，或演进为真正主动的体验。无需重写，一套工具，拥抱 Agentic 未来。
-      </p>
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">你在 AI 时代面临的挑战</h2>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">僵硬 UX 抓不住意图</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">用户期望自然、主动的帮助；点击式流程丢失上下文、转化下滑。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">隐私合规让旧方法失效</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">依赖 Cookie/指纹的跟踪难以为继；同意与透明成为基础要求。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">AI 必然到来，全面重写不可承受</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">需要尽快具备 Agentic 能力，但大规模重写拖慢节奏、风险高。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">上下文是关键缺口</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">没有设备/应用上下文，LLM 只能“猜”，难以做出有意义的行动。</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- 接下来怎么做 -->
+  <section class="py-12 md:py-20" id="next">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">接下来怎么做 —— 低风险升级路径</h2>
+      <div class="mt-6 grid md:grid-cols-2 gap-6">
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">从“对话流”开始</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">在现有 UI 旁增量接入对话流程，无需大改，提供达成目标的替代路径。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">采集有用上下文</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">将位置、传感器、应用信号沉淀为记忆层，支撑个性化与更好推理。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">在设备侧执行动作</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小权限、逐次同意、全量审计；敏感动作本地运行更安全。</p>
+        </div>
+        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
+          <h3 class="font-semibold text-lg">桥接 云 ↔ 边</h3>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">云端推理，设备安全执行；更快、更私密、策略可控。</p>
+        </div>
+      </div>
     </div>
   </section>
 
