restructure confent flow of landing pages

--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -49,7 +49,8 @@
           <span class="ml-2 rounded-full px-2 py-0.5 text-xs bg-zinc-900 text-white dark:bg-white dark:text-zinc-900">预览</span>
         </a>
         <nav class="hidden md:flex items-center gap-6 text-sm">
-          <a href="#why" class="hover:text-indigo-600">为什么</a>
+          <a href="#challenges" class="hover:text-indigo-600">挑战</a>
+          <a href="#next" class="hover:text-indigo-600">路径</a>
           <a href="#features" class="hover:text-indigo-600">特性</a>
           <a href="#whitepaper" class="hover:text-indigo-600">白皮书</a>
           <a href="#compare" class="hover:text-indigo-600">对比</a>
@@ -207,34 +208,7 @@ flowchart LR
     </div>
   </section>
 
-  <!-- 为什么 -->
-  <section class="py-12 md:py-20" id="why">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">为什么现在就用 NeuronKit 升级你的遗留应用</h2>
-      <div class="mt-6 grid md:grid-cols-3 gap-6">
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">从僵硬流程到主动对话</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">摆脱点击式 UX 的局限，捕捉用户真实意图；用自然对话主动引导，沉淀长期黏性。</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">轻松获取上下文</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">不再从零散数据“猜需求”。NeuronKit 非侵入式采集位置、传感器、应用信号，沉淀为可推理的智能记忆。</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">安全的设备侧能力</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">AI 动作在设备侧执行，内置同意与审计；云端智能与本地控制相结合，隐私优先。</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">为真实开发者而建</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">无论维护遗留应用还是打造超级应用——简单 API 与可插拔工具，让 AI 能力快速落地，无需重头来过。</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">未来属于 Agentic</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">传统应用正被 AI 驱动的人机交互增强甚至取代。率先拥抱变化，让应用变得自适应、可对话、面向未来。</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- 关键特性 -->
   <section id="features" class="py-12 md:py-20 bg-zinc-100/60 dark:bg-zinc-900/40">
@@ -242,6 +216,7 @@ flowchart LR
       <div class="grid lg:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">关键特性</h2>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">用一个 SDK 实现推荐路径：增量接入对话流、采集上下文，并在设备侧执行（含同意与审计）——跨平台、可生产。</p>
           <ul class="mt-6 space-y-4 text-zinc-700 dark:text-zinc-300">
             <li><span class="font-medium">无缝上下文 SDK：</span> 轻松将位置、传感器等设备数据转化为可行动洞察——非侵入式升级应用感知，无需“动大手术”。</li>
             <li><span class="font-medium">设备侧防护沙箱：</span> 一次定义权限，AI 动作安全执行并自动处理同意——告别隐私与合规焦虑。</li>
