--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -51,7 +51,8 @@
           <span class="ml-2 rounded-full px-2 py-0.5 text-xs bg-zinc-900 text-white dark:bg-white dark:text-zinc-900">Preview</span>
         </a>
         <nav class="hidden md:flex items-center gap-6 text-sm">
-          <a href="#why" class="hover:text-indigo-600">Why</a>
+          <a href="#challenges" class="hover:text-indigo-600">Challenges</a>
+          <a href="#next" class="hover:text-indigo-600">Next</a>
           <a href="#features" class="hover:text-indigo-600">Features</a>
           <a href="#whitepaper" class="hover:text-indigo-600">White Paper</a>
           <a href="#compare" class="hover:text-indigo-600">Comparison</a>
@@ -155,6 +156,7 @@ flowchart LR
           </div>
           <p class="mt-4 text-sm text-zinc-600 dark:text-zinc-400">Inference in the cloud; safe actions on the device. The app behaves like a neuron in a larger agentic system.</p>
         </div>
+        <p class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">If this path resonates, learn why teams pick NeuronKit to implement it in the <a href="#why" class="text-indigo-600 hover:text-indigo-500 underline-offset-2 underline">Why NeuronKit</a> section.</p>
       </div>
     </div>
   </section>
@@ -209,34 +211,7 @@ flowchart LR
     </div>
   </section>
 
-  <!-- Why NeuronKit -->
-  <section class="py-12 md:py-20" id="why">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">Why Upgrade Your Legacy Apps with NeuronKit Now</h2>
-      <div class="mt-6 grid md:grid-cols-3 gap-6">
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">From Rigid Flows to Proactive Dialogs</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Escape click‑based UX that frustrates users and misses intent. Embrace agentic interfaces that anticipate needs through natural conversations—building loyalty.</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Effortless Context Capture</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Stop guessing needs from sparse data. NeuronKit gathers real‑time device insights—location, sensors, app signals—and organizes them into smart memories.</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Secure, On‑Device Power</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Run AI actions where they matter—on the device—with built‑in consents and audits. Bridge cloud smarts with local control and privacy.</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">Built for Real Developers Like You</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Maintain a fleet or build a superapp—simple APIs and drop‑in tools add AI fast. Upgrade the long tail of legacy apps without starting from scratch.</p>
-        </div>
-        <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-xl">The Future is Agentic</h3>
-          <p class="mt-2 text-zinc-600 dark:text-zinc-400">Traditional apps are being augmented—or replaced—by AI‑driven HCI. Lead the charge and make your apps adaptive, engaging, and ready for tomorrow.</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  
 
   <!-- Key Features -->
   <section id="features" class="py-12 md:py-20 bg-zinc-100/60 dark:bg-zinc-900/40">
@@ -244,6 +219,7 @@ flowchart LR
       <div class="grid lg:grid-cols-2 gap-10 items-start">
         <div>
           <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">Key Features</h2>
+          <p class="mt-2 text-zinc-700 dark:text-zinc-300">Build the recommended path with a single SDK: add dialog streams, capture context, and execute on‑device with consent and audit—production‑ready across platforms.</p>
           <ul class="mt-6 space-y-4 text-zinc-700 dark:text-zinc-300">
             <li><span class="font-medium">Seamless Context SDK:</span> effortlessly stream device data like location and sensors into actionable insights—non‑intrusively upgrading awareness without codebase chaos.</li>
             <li><span class="font-medium">On‑Device Safeguard Sandbox:</span> define permissions once; let AI actions run securely with automatic consents—goodbye privacy headaches.</li>
