--- a/zh/neuronkit/index.html
+++ b/zh/neuronkit/index.html
@@ -49,12 +49,10 @@
           <span class="ml-2 rounded-full px-2 py-0.5 text-xs bg-zinc-900 text-white dark:bg-white dark:text-zinc-900">预览</span>
         </a>
         <nav class="hidden md:flex items-center gap-6 text-sm">
-          <a href="#challenges" class="hover:text-indigo-600">挑战</a>
-          <a href="#next" class="hover:text-indigo-600">路径</a>
-          <a href="#features" class="hover:text-indigo-600">特性</a>
-          <a href="#whitepaper" class="hover:text-indigo-600">白皮书</a>
-          <a href="#compare" class="hover:text-indigo-600">对比</a>
-          <a href="#docs" class="hover:text-indigo-600">文档</a>
+          <a href="#challenges" class="hover:text-indigo-600">变革</a>
+          <a href="#next" class="hover:text-indigo-600">行动</a>
+          <a href="#features" class="hover:text-indigo-600">方案</a>
+          <a href="#whitepaper" class="hover:text-indigo-600">洞察</a>
         </nav>
         <div class="flex items-center gap-3">
           <a href="https://finogeeks.github.io/agentic" target="_blank" rel="noreferrer" class="px-3 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 text-sm">GitHub</a>
@@ -71,41 +69,42 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-14 md:py-24 relative">
       <div class="grid lg:grid-cols-2 gap-8 md:gap-10 items-center">
         <div>
+          <!-- 标语对 -->
+          <div class="mb-6">
+            <h1 class="text-3xl sm:text-4xl md:text-5xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
+              将任何应用变成 Agent
+            </h1>
+            <p class="mt-3 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+              汇聚上下文、保障执行安全，解锁 Agentic 体验——连接云端智能与设备侧执行。
+            </p>
+          </div>
           <div id="hero-variants" class="relative">
             <!-- 变体 A（默认） -->
             <div class="hero-variant" data-variant="a">
-              <h1 class="text-3xl sm:text-4xl md:text-6xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
-                传统应用停在过去——无需大改造，解锁<span class="gradient-text">AI 对话能力</span>
-              </h1>
-              <p class="mt-6 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                你的移动应用仍依赖僵硬的点击与表单，但用户已期待直觉、主动的互动。AI 代理正在重塑人机交互——别被落下，轻松加入浪潮。<strong>NeuronKit</strong> 是非侵入式 SDK：为你的应用注入实时上下文感知、设备侧安全动作与顺滑的对话流。将被动体验升级为 Agentic 体验，在电商、金融等场景显著提升参与度，同时尊重隐私、改动最小。
+              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">从“点击”到“对话”</h3>
+              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+                将静态、以点击为主的应用升级为以对话为主的体验。用户不再不停找菜单和购物车，而是与懂意图、可执行的“智能礼宾”互动。对话取代点击，让日常任务以更自然、主动且更具参与感的方式完成。
               </p>
             </div>
             <!-- 变体 B（更大胆） -->
             <div class="hero-variant hidden" data-variant="b">
-              <h1 class="text-3xl sm:text-4xl md:text-6xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
-                AI 正在取代老旧应用——<span class="gradient-text">现在升级</span>，别等为时已晚
-              </h1>
-              <p class="mt-6 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                从笨重的遗留界面迈向聪明的对话式代理：<strong>NeuronKit</strong> 让迁移变得简单顺滑。实时捕捉用户上下文，安全在设备侧执行动作，无需推倒重来即可集成 AI。尤其适合希望在金融、医疗等场景率先完成“面向未来”升级的团队。
+              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">上下文创造智能</h3>
+              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+                AI 不只是大语言模型，更是“上下文”。通过把设备信号、历史与应用状态组织为语义、情景与程序性记忆，NeuronKit 让代理能做出更相关、及时的决策。上下文越丰富，智能越到位，体验也更贴合真实场景。
               </p>
             </div>
             <!-- 变体 C（点击流 → 对话流；电商 → Agentic 电商） -->
             <div class="hero-variant hidden" data-variant="c">
-              <h1 class="text-3xl sm:text-4xl md:text-6xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
-                从“点击流”到 <span class="gradient-text">“对话流”</span> —— 电商正演进为 Agentic 电商
-              </h1>
-              <p class="mt-6 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                静态漏斗与被动购物车，正在被主动、可对话的购物旅程取代。<strong>NeuronKit</strong> 让你的应用具备上下文感知的代理，将“浏览+点击”转化为被引导的结果——合规、私密、且更高效。
+              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">面向信任的设备侧沙箱</h3>
+              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+                在边缘安全地运行代理触发的动作。不同于云端沙箱，NeuronKit 在设备上直接实施能力模型，保障隐私、低时延与细粒度控制。敏感能力仅在明确策略下执行，并始终保留安全与人的监督。
               </p>
             </div>
             <!-- 变体 D（云端“脑”，设备“手”） -->
             <div class="hero-variant hidden" data-variant="d">
-              <h1 class="text-3xl sm:text-4xl md:text-6xl font-extrabold leading-snug md:leading-tight text-balance break-anywhere hyphens-auto">
-                云端“脑”，<span class="gradient-text">设备“手”</span> —— 隐私优先，策略可控
-              </h1>
-              <p class="mt-6 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
-                云端推理，设备执行。NeuronKit 的设备侧能力沙箱落实最小权限、逐次同意与完整审计——让你放心上线 Agentic 能力。
+              <h3 class="text-2xl md:text-3xl font-bold text-balance break-anywhere">为遗留应用插上“智能插件”</h3>
+              <p class="mt-4 text-base sm:text-lg text-zinc-700 dark:text-zinc-300 max-w-xl md:max-w-2xl text-pretty break-anywhere hyphens-auto">
+                无需大改造，即可为现有应用加上 Agentic 能力。NeuronKit 以中间件形式即插即用：注册功能、采集上下文并启用安全自动化。企业可以立刻为移动或 IoT 应用接入对话式 AI，解锁新业务与更高参与度。
               </p>
             </div>
           </div>
@@ -117,9 +116,9 @@
           </div>
           <div class="mt-8 flex flex-wrap gap-3">
             <a href="#cta" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">申请早期访问</a>
-            <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">阅读白皮书</a>
+            <a href="#whitepaper" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">查看洞见</a>
           </div>
-          <div class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">云端“脑”、设备“手”。隐私优先，策略可控，人在回路。</div>
+          <div class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">云端“脑”，设备“手”。全面可控。</div>
           <!-- 首屏轮播控制 -->
           <div class="mt-4 flex items-center gap-2" aria-label="首屏变体" role="tablist">
             <button class="hero-dot h-2.5 w-2.5 rounded-full bg-zinc-400" aria-selected="true" aria-controls="hero-a" role="tab" title="变体 A"></button>
@@ -153,6 +152,7 @@ flowchart LR
             </div>
           </div>
           <p class="mt-4 text-sm text-zinc-600 dark:text-zinc-400">云端推理；设备执行。应用如同大型 Agent 系统中的一个“神经元”。</p>
+          <p class="mt-6 text-sm text-zinc-600 dark:text-zinc-400">如果你认可这条路径，请在 <a href="#features" class="text-indigo-600 hover:text-indigo-500 underline-offset-2 underline">解决方案</a> 中了解如何用 NeuronKit 落地。</p>
         </div>
       </div>
     </div>
@@ -164,19 +164,31 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">你在 AI 时代面临的挑战</h2>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">僵硬 UX 抓不住意图</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">僵硬 UX 抓不住意图</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">用户期望自然、主动的帮助；点击式流程丢失上下文、转化下滑。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">隐私合规让旧方法失效</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">隐私合规让旧方法失效</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">依赖 Cookie/指纹的跟踪难以为继；同意与透明成为基础要求。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">AI 必然到来，全面重写不可承受</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">AI 必然到来，全面重写不可承受</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">需要尽快具备 Agentic 能力，但大规模重写拖慢节奏、风险高。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">上下文是关键缺口</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">上下文是关键缺口</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">没有设备/应用上下文，LLM 只能“猜”，难以做出有意义的行动。</p>
         </div>
       </div>
@@ -189,19 +201,31 @@ flowchart LR
       <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">接下来怎么做 —— 低风险升级路径</h2>
       <div class="mt-6 grid md:grid-cols-2 gap-6">
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">从“对话流”开始</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">从“对话流”开始</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">在现有 UI 旁增量接入对话流程，无需大改，提供达成目标的替代路径。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">采集有用上下文</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">采集有用上下文</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">将位置、传感器、应用信号沉淀为记忆层，支撑个性化与更好推理。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">在设备侧执行动作</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">在设备侧执行动作</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">最小权限、逐次同意、全量审计；敏感动作本地运行更安全。</p>
         </div>
         <div class="p-6 rounded-3xl border border-zinc-200 dark:border-zinc-800">
-          <h3 class="font-semibold text-lg">桥接 云 ↔ 边</h3>
+          <div class="flex items-center gap-2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="h-5 w-5 text-indigo-600"><circle cx="12" cy="12" r="9"/><path d="M9 12l2 2 4-4"/></svg>
+            <h3 class="font-semibold text-lg">桥接 云 ↔ 边</h3>
+          </div>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">云端推理，设备安全执行；更快、更私密、策略可控。</p>
         </div>
       </div>
@@ -210,12 +234,12 @@ flowchart LR
 
   
 
-  <!-- 关键特性 -->
+  <!-- 解决方案 -->
   <section id="features" class="py-12 md:py-20 bg-zinc-100/60 dark:bg-zinc-900/40">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="grid lg:grid-cols-2 gap-10 items-start">
         <div>
-          <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">关键特性</h2>
+          <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">解决方案</h2>
           <p class="mt-2 text-zinc-700 dark:text-zinc-300">用一个 SDK 实现推荐路径：增量接入对话流、采集上下文，并在设备侧执行（含同意与审计）——跨平台、可生产。</p>
           <ul class="mt-6 space-y-4 text-zinc-700 dark:text-zinc-300">
             <li><span class="font-medium">无缝上下文 SDK：</span> 轻松将位置、传感器等设备数据转化为可行动洞察——非侵入式升级应用感知，无需“动大手术”。</li>
@@ -248,10 +272,10 @@ flowchart LR
     </div>
   </section>
 
-  <!-- 白皮书 -->
+  <!-- 洞见 -->
   <section id="whitepaper" class="py-12 md:py-20">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">白皮书</h2>
+      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">洞见</h2>
       <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">深入了解 NeuronKit 的架构、能力模型与安全设计：云端记忆、设备侧沙箱（PDP/PEP）与对话式 UI 如何协同，构建安全的上下文智能体验。</p>
       <div class="mt-6 flex flex-wrap gap-3">
         <a href="/zh/neuronkit/whitepaper/" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">在线阅读</a>
@@ -260,50 +284,6 @@ flowchart LR
     </div>
   </section>
 
-  <!-- 对比 -->
-  <section id="compare" class="py-12 md:py-20 bg-zinc-100/60 dark:bg-zinc-900/40">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">与云端沙箱的对比</h2>
-      <div class="mt-6 overflow-x-auto">
-        <table class="w-full text-left text-sm border-separate border-spacing-y-2">
-          <thead class="text-zinc-600 dark:text-zinc-400">
-            <tr>
-              <th class="px-4 py-2">维度</th>
-              <th class="px-4 py-2">云端沙箱（如 E2B/Modal）</th>
-              <th class="px-4 py-2">NeuronKit（设备侧）</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="bg-white/60 dark:bg-zinc-900/60">
-              <td class="px-4 py-3 font-medium">工具运行位置</td>
-              <td class="px-4 py-3">服务器容器</td>
-              <td class="px-4 py-3">直接在应用 / 设备内</td>
-            </tr>
-            <tr class="bg-white/60 dark:bg-zinc-900/60">
-              <td class="px-4 py-3 font-medium">上下文丰富度</td>
-              <td class="px-4 py-3">受限于设备实时信号</td>
-              <td class="px-4 py-3">完整设备上下文（受策略控制）</td>
-            </tr>
-            <tr class="bg-white/60 dark:bg-zinc-900/60">
-              <td class="px-4 py-3 font-medium">隐私与同意</td>
-              <td class="px-4 py-3">依赖云侧策略</td>
-              <td class="px-4 py-3">设备侧策略引擎 + 逐次同意</td>
-            </tr>
-            <tr class="bg-white/60 dark:bg-zinc-900/60">
-              <td class="px-4 py-3 font-medium">时延</td>
-              <td class="px-4 py-3">执行需往返</td>
-              <td class="px-4 py-3">边缘执行，降低感知时延</td>
-            </tr>
-            <tr class="bg-white/60 dark:bg-zinc-900/60">
-              <td class="px-4 py-3 font-medium">体验</td>
-              <td class="px-4 py-3">仅聊天，UI 分离</td>
-              <td class="px-4 py-3">聊天 + 内嵌 UI 组件</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </section>
 
   <!-- 文档 -->
   <section id="docs" class="py-12 md:py-20">
@@ -339,8 +319,8 @@ flowchart LR
   <footer class="py-10 border-t border-zinc-200/60 dark:border-zinc-800/60">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center justify-between gap-4">
       <p class="text-sm text-zinc-600 dark:text-zinc-400">© <span id="y"></span> NeuronKit（Agentic 中间件）。早期预览。</p>
+      <p class="text-sm text-zinc-600 dark:text-zinc-400">云端“脑”，设备“手”。全面可控。</p>
       <div class="text-sm flex items-center gap-4">
-        <a href="/zh/neuronkit.html" class="hover:text-indigo-600">文档</a>
         <a href="#" class="hover:text-indigo-600">隐私</a>
         <a href="#" class="hover:text-indigo-600">联系</a>
       </div>
