--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -54,7 +54,22 @@
           <a href="#challenges" class="hover:text-indigo-600">Why Change</a>
           <a href="#next" class="hover:text-indigo-600">What's next</a>
           <a href="#features" class="hover:text-indigo-600">Solution</a>
-          <a href="#whitepaper" class="hover:text-indigo-600">Insights</a>
+          <div class="relative group">
+            <button class="inline-flex items-center gap-1 hover:text-indigo-600" aria-haspopup="true" aria-expanded="false">
+              <span>Insights</span>
+              <svg class="h-3.5 w-3.5 opacity-70" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true"><path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.173l3.71-3.942a.75.75 0 111.08 1.04l-4.24 4.5a.75.75 0 01-1.08 0l-4.24-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd"/></svg>
+            </button>
+            <div class="invisible opacity-0 group-hover:visible group-hover:opacity-100 group-focus-within:visible group-focus-within:opacity-100 transition-opacity duration-150 absolute right-0 mt-2 w-80 rounded-xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shadow-lg py-2">
+              <div class="px-4 py-2 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">Latest Articles</div>
+              <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">From Clickstream to Dialogstream</a>
+              <a href="/en/neuronkit/whitepaper/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">E-commerce: Clickstream → Dialogstream</a>
+              <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Sandboxing for Agents</a>
+              <a href="/en/neuronkit/insights/agentic-interface/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">The Agentic Interface: Definitive Report</a>
+              <a href="/en/neuronkit/insights/agent-cage/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agent Cage</a>
+              <div class="my-2 border-t border-zinc-200 dark:border-zinc-800"></div>
+              <a href="/en/neuronkit/insights/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">All Insights</a>
+            </div>
+          </div>
         </nav>
         <div class="flex items-center gap-3">
           <a href="https://finogeeks.github.io/agentic" target="_blank" rel="noreferrer" class="px-3 py-2 rounded-xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 text-sm">GitHub</a>
@@ -278,11 +293,14 @@ flowchart LR
   <section id="whitepaper" class="py-12 md:py-20">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <h2 class="text-3xl md:text-4xl font-bold text-balance break-anywhere">Insights</h2>
-      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">Dive deeper into NeuronKit’s architecture, capability model, and security posture. Learn how cloud memory, on-device sandboxing (PDP/PEP), and ConvoUI work together to enable safe, context-rich agentic experiences.</p>
-      <div class="mt-6 flex flex-wrap gap-3">
-        <a href="/en/neuronkit/whitepaper/" class="px-5 py-3 rounded-2xl bg-indigo-600 hover:bg-indigo-500 text-white font-medium">Read Online</a>
-        <a href="#" class="px-5 py-3 rounded-2xl border border-zinc-300 dark:border-zinc-700 hover:bg-zinc-100 dark:hover:bg-zinc-900 font-medium">Download PDF (soon)</a>
-      </div>
+      <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">Dive deeper into NeuronKit’s architecture and related topics through our collection of articles.</p>
+      <ul class="mt-6 space-y-2 list-disc list-inside">
+        <li><a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html">From Clickstream to Dialogstream</a></li>
+        <li><a href="/en/neuronkit/insights/E-commerce_ Clickstream to Dialogstream.md">E-commerce: Clickstream to Dialogstream</a></li>
+        <li><a href="/en/neuronkit/insights/Sandboxing_for_agents.md">Sandboxing for Agents</a></li>
+        <li><a href="/en/neuronkit/insights/The Agentic Interface_ A Definitive Report on User Experience at the Age of AI Agents.md">The Agentic Interface: A Definitive Report</a></li>
+        <li><a href="/en/neuronkit/insights/Agent_cage.md">Agent Cage</a></li>
+      </ul>
     </div>
   </section>
 
@@ -303,7 +321,7 @@ flowchart LR
   <!-- Footer -->
   <footer class="py-10 border-t border-zinc-200/60 dark:border-zinc-800/60">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col md:flex-row items-center justify-between gap-4">
-      <p class="text-sm text-zinc-600 dark:text-zinc-400">© <span id="y"></span> NeuronKit (Agentic Context SDK). Early preview.</p>
+      <p class="text-sm text-zinc-600 dark:text-zinc-400">  NeuronKit (Agentic Context SDK). Early preview.</p>
       <p class="text-sm text-zinc-600 dark:text-zinc-400">Cloud Brain, Device Hands. Full Control.</p>
       <div class="text-sm flex items-center gap-4">
         <a href="#" class="hover:text-indigo-600">Privacy</a>
