Add chinese version of insight articles

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -62,7 +62,7 @@
             <div class="invisible opacity-0 group-hover:visible group-hover:opacity-100 group-focus-within:visible group-focus-within:opacity-100 transition-opacity duration-150 absolute right-0 mt-2 w-80 rounded-xl border border-zinc-200 dark:border-zinc-800 bg-white dark:bg-zinc-900 shadow-lg py-2">
               <div class="px-4 py-2 text-xs uppercase tracking-wide text-zinc-500 dark:text-zinc-400">Latest Articles</div>
               <a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">From Clickstream to Dialogstream</a>
-              <a href="/en/neuronkit/whitepaper/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">E-commerce: Clickstream → Dialogstream</a>
+              <a href="/en/neuronkit/whitepaper/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">AI Transforming E-commerce to Agentic Commerce</a>
               <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Sandboxing for Agents</a>
               <a href="/en/neuronkit/insights/agentic-interface/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">The Agentic Interface: Definitive Report</a>
               <a href="/en/neuronkit/insights/agent-cage/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agent Cage</a>
