Fix links to insight articles

--- a/en/neuronkit/index.html
+++ b/en/neuronkit/index.html
@@ -66,6 +66,7 @@
               <a href="/en/neuronkit/insights/sandboxing-for-agents/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Sandboxing for Agents</a>
               <a href="/en/neuronkit/insights/agentic-interface/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">The Agentic Interface: Definitive Report</a>
               <a href="/en/neuronkit/insights/agent-cage/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">Agent Cage</a>
+              <a href="/en/neuronkit/insights/ai-agent-economy/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">The Agentic Economy</a>
               <div class="my-2 border-t border-zinc-200 dark:border-zinc-800"></div>
               <a href="/en/neuronkit/insights/" class="block px-4 py-2 hover:bg-zinc-50 dark:hover:bg-zinc-800">All Insights</a>
             </div>
@@ -296,10 +297,11 @@ flowchart LR
       <p class="mt-4 text-zinc-700 dark:text-zinc-300 max-w-3xl">Dive deeper into NeuronKit’s architecture and related topics through our collection of articles.</p>
       <ul class="mt-6 space-y-2 list-disc list-inside">
         <li><a href="/en/neuronkit/insights/from_clickstream_to_dialogstream.html">From Clickstream to Dialogstream</a></li>
-        <li><a href="/en/neuronkit/insights/E-commerce_ Clickstream to Dialogstream.md">E-commerce: Clickstream to Dialogstream</a></li>
-        <li><a href="/en/neuronkit/insights/Sandboxing_for_agents.md">Sandboxing for Agents</a></li>
-        <li><a href="/en/neuronkit/insights/The Agentic Interface_ A Definitive Report on User Experience at the Age of AI Agents.md">The Agentic Interface: A Definitive Report</a></li>
-        <li><a href="/en/neuronkit/insights/Agent_cage.md">Agent Cage</a></li>
+        <li><a href="/en/neuronkit/whitepaper/">E-commerce: Clickstream to Dialogstream (Report)</a></li>
+        <li><a href="/en/neuronkit/insights/sandboxing-for-agents/">Sandboxing for Agents</a></li>
+        <li><a href="/en/neuronkit/insights/agentic-interface/">The Agentic Interface: A Definitive Report</a></li>
+        <li><a href="/en/neuronkit/insights/agent-cage/">Agent Cage</a></li>
+        <li><a href="/en/neuronkit/insights/ai-agent-economy/">The Agentic Economy</a></li>
       </ul>
     </div>
   </section>
