--- a/en/neuronkit/insights/index.html
+++ b/en/neuronkit/insights/index.html
@@ -69,6 +69,13 @@
           <h2 class="mt-1 font-semibold">The Agent's Cage</h2>
           <p class="mt-2 text-sm text-zinc-600">Comprehensive paper on sandboxing autonomous systems and governance layers.</p>
         </a>
+
+        <!-- Card: Agentic Economy -->
+        <a href="/en/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">Report</div>
+          <h2 class="mt-1 font-semibold">The Agentic Economy: New Playbook for Digital Monetization</h2>
+          <p class="mt-2 text-sm text-zinc-600">From eyeballs to agents: AI-native pricing models, M2M payments, and trust frameworks.</p>
+        </a>
       </div>
 
       <div class="mt-10">
