--- a/zh/neuronkit/insights/index.html
+++ b/zh/neuronkit/insights/index.html
@@ -47,7 +47,7 @@
           <p class="mt-2 text-sm text-zinc-600">图表展示 Agentic 转型与生成式 UI。</p>
         </a>
 
-        <a href="/cn/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
+        <a href="/zh/neuronkit/insights/sandboxing-for-agents/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
           <h2 class="mt-1 font-semibold">面向 Agent 的沙箱</h2>
           <p class="mt-2 text-sm text-zinc-600">面向代理系统的沙箱分类与设计模式。</p>
@@ -59,10 +59,16 @@
           <p class="mt-2 text-sm text-zinc-600">协议栈、设计原则与典型案例。</p>
         </a>
 
-        <a href="/cn/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
+        <a href="/zh/neuronkit/insights/agent-cage/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
           <div class="text-xs uppercase tracking-wide text-zinc-500">白皮书</div>
           <h2 class="mt-1 font-semibold">Agent 的“牢笼”</h2>
           <p class="mt-2 text-sm text-zinc-600">自治系统的沙箱与治理层实践。</p>
+        </a>
+
+        <a href="/zh/neuronkit/insights/ai-agent-economy/" class="block p-5 rounded-2xl border border-zinc-200 hover:border-indigo-300 hover:shadow-md transition">
+          <div class="text-xs uppercase tracking-wide text-zinc-500">报告</div>
+          <h2 class="mt-1 font-semibold">智能体经济新指南：AI 时代数字货币化</h2>
+          <p class="mt-2 text-sm text-zinc-600">从眼球经济到智能体经济：AI 原生商业模型、金融基础设施与信任框架。</p>
         </a>
       </div>
 
